--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
     "name": "zelo-reactjs",
     "version": "0.1.0",
     "private": true,
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prepare": "husky install"
+    },
     "dependencies": {
         "@ant-design/icons": "^4.6.2",
         "@dhaiwat10/react-link-preview": "^1.9.1",
@@ -14,6 +21,7 @@
         "formik": "^2.2.9",
         "html-react-parser": "^1.4.0",
         "peerjs": "^1.3.2",
+        "prop-types": "^15.8.1",
         "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-avatar-editor": "^12.0.0",
@@ -27,18 +35,18 @@
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "5.0.1",
         "socket.io-client": "^4.1.3",
         "web-vitals": "^1.1.2",
         "webrtc-adapter": "^8.1.0",
         "yup": "^0.32.9"
     },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "prepare": "husky install"
+    "devDependencies": {
+        "fslightbox-react": "^1.6.2-2",
+        "husky": "^7.0.4",
+        "lint-staged": "^11.2.3",
+        "node-sass": "^9.0.0",
+        "prettier": "^2.4.1"
     },
     "lint-staged": {
         "src/**/*.js": "prettier --write"
@@ -60,12 +68,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "fslightbox-react": "^1.6.2-2",
-        "husky": "^7.0.4",
-        "lint-staged": "^11.2.3",
-        "node-sass": "^6.0.1",
-        "prettier": "^2.4.1"
     }
 }
