--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,10 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      VERSION=$(echo $(git rev-parse --short HEAD)-$(date +%Y%m%d))
     steps:
       - uses: actions/checkout@v4
       - name: Build the Docker image with both tags
         run: docker build . --file Dockerfile --tag nghiaphamln/meetdy-frontend:latest
-          --tag nghiaphamln/meetdy-frontend:${VERSION}
+          --tag nghiaphamln/meetdy-frontend:$(date +%s)
