--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -11,6 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Apply configuration
+        run: |
+          git clone https://oauth2:${{ secrets.CONFIG_REPOSITORY_TOKEN }}@github.com/meetdy/infrastructure-config.git
+          [ -e .env ] && rm .env
+          [ -e Dockerfile ] && rm Dockerfile
+          cp infrastructure-config/meetdy-frontend/.env ./
+          cp infrastructure-config/meetdy-frontend/Dockerfile ./
       
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
