--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,8 +46,8 @@ jobs:
           VPS_PASSWORD: ${{ secrets.VPS_PASSWORD }}
           VPS_HOST: ${{ secrets.VPS_HOST }}
         run: |
-          sshpass -p "$VPS_PASSWORD" ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_HOST << EOF
-            cd ./docker/meetdy-frontend
+          sshpass -p "$VPS_PASSWORD" ssh -o StrictHostKeyChecking=no -t $VPS_USER@$VPS_HOST << EOF
+            cd ./docker/meetdy-frontend || exit
             docker compose pull
             docker compose restart
           EOF
