--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,12 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
