--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@dhaiwat10/react-link-preview": "^1.10.4",
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/query-sync-storage-persister": "^5.90.12",
+    "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-query-persist-client": "^5.90.12",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.0",
     "@testing-library/user-event": "^14.5.2",
@@ -44,12 +47,14 @@
     "tailwindcss": "^4.1.17",
     "web-vitals": "^3.5.2",
     "webrtc-adapter": "^9.0.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "eslint": "^9.39.1",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
