--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,8 +10,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "assets/*": ["./src/assets/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"]
