--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "assets/*": ["./src/assets/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
