--- a/package.json
+++ b/package.json
@@ -13,6 +13,24 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@dhaiwat10/react-link-preview": "^1.10.4",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.2.3",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/query-sync-storage-persister": "^5.90.12",
@@ -25,17 +43,27 @@
     "@tiptap/starter-kit": "^2.6.6",
     "antd": "^5.20.2",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "html-react-parser": "^5.1.17",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.554.0",
+    "next-themes": "^0.4.6",
     "peerjs": "^1.5.2",
     "prop-types": "^15.8.1",
     "query-string": "^8.2.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.0",
     "react-custom-scrollbars-2": "^4.5.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^18.3.1",
     "react-file-icon": "^1.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.66.1",
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal-video": "^2.0.2",
@@ -43,8 +71,12 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "shadcn": "^3.5.0",
     "socket.io-client": "^4.7.5",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "vaul": "^1.1.2",
     "web-vitals": "^3.5.2",
     "webrtc-adapter": "^9.0.1",
     "yup": "^1.4.0",
@@ -65,6 +97,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "prettier": "^2.8.8",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.0.0",
