--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
     "@vitejs/plugin-react": "^4.6.0",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "eslint": "^9.39.1",
