--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
 
     "allowJs": true,
     "checkJs": false,
