--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-virtuoso": "^4.18.1",
     "shadcn": "^3.5.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^2.0.7",
