refactor: Migrate conversation item context menus to Shadcn UI ContextMenu components and enhance SubMenuClassify for dual usage.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "tsx"],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   }
 }
