feat: add feat Emoji (frimousse) react message

--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
+    "frimousse": "^0.3.0",
     "html-react-parser": "^5.1.17",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.554.0",
+    "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "peerjs": "^1.5.2",
     "prop-types": "^15.8.1",
