--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "use-debounce": "^10.1.0",
     "vaul": "^1.1.2",
     "web-vitals": "^3.5.2",
     "webrtc-adapter": "^9.0.1",
